--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,6 +41,7 @@
     "baseUrl": "./",
     "paths": {
       "assets/*": ["./assets/*"],
+      "config/*": ["./src/config/*"],
       "components/*": ["./src/components/*"],
       "constants/*": ["./src/constants/*"],
       "screens/*": ["./src/screens/*"],
