devTask:     - Import custom fonts     - Link fonts to iOS/andorid projects     - Create basic theme file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -46,6 +46,7 @@
       "constants/*": ["./src/constants/*"],
       "screens/*": ["./src/screens/*"],
       "states/*": ["./src/states/*"],
+      "theme/*": ["./src/theme/*"],
       "types/*": ["./src/types/*"],
       "utils/*": ["./src/utils/*"]
     },
