--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@react-native-async-storage/async-storage": "^1.15.11",
     "@react-native-community/checkbox": "^0.5.9",
     "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
+    "@types/react-native-snap-carousel": "^3.8.5",
     "axios": "^0.24.0",
     "date-and-time": "^2.0.1",
     "react": "17.0.2",
@@ -23,6 +25,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^9.0.0",
     "redux": "^4.1.2"
   },
