--- a/android/build.gradle
+++ b/android/build.gradle
@@ -11,9 +11,14 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        jcenter()
+
     }
     dependencies {
         classpath("com.android.tools.build:gradle:4.2.2")
+        // implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:9.6.1'
+        // implementation 'com.mapbox.mapboxsdk:mapbox-sdk-services:5.6.0'
+        // implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-annotation-v9:0.9.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -23,6 +28,8 @@ allprojects {
     repositories {
         mavenCentral()
         mavenLocal()
+        jcenter()
+
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url("$rootDir/../node_modules/react-native/android")
@@ -32,7 +39,34 @@ allprojects {
             url("$rootDir/../node_modules/jsc-android/dist")
         }
 
+        maven {
+            url 'https://api.mapbox.com/downloads/v2/releases/maven'
+            authentication {
+                basic(BasicAuthentication)
+            }
+            credentials {
+                // Do not change the username below.
+                // This should always be `mapbox` (not your username).
+                username = 'mapbox'
+                // Use the secret token you stored in gradle.properties as the password
+                password = project.properties['sk.eyJ1IjoiYWwwNzMzNTYiLCJhIjoiY2t2cG1yZHhhMHBjZTJva2c3eGo4Nnl6dCJ9.FhJcjkh6aG4zD_8ml13aKw'] ?: ""
+            }
+        }
+
         google()
         maven { url 'https://www.jitpack.io' }
     }
+    //    maven {
+    //         url 'https://api.mapbox.com/downloads/v2/releases/maven'
+    //         authentication {
+    //             basic(BasicAuthentication)
+    //         }
+    //         credentials {
+    //             // Do not change the username below.
+    //             // This should always be `mapbox` (not your username).
+    //             username = 'mapbox'
+    //             // Use the secret token you stored in gradle.properties as the password
+    //             password = project.properties['MAPBOX_DOWNLOADS_TOKEN'] ?: ""
+    //         }
+    //     }
 }
