--- a/ios/Podfile
+++ b/ios/Podfile
@@ -22,6 +22,9 @@ target 'lm' do
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable the next line.
   use_flipper!()
+  pre_install do |installer|
+    $RNMBGL.pre_install(installer)
+  end
 
   post_install do |installer|
     react_native_post_install(installer)
